[metadata]
name = pytzen
version = 1.0.0
author = PYTZEN
description = PYTZEN
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = pytzen
python_requires = >=3.10