[metadata]
name = pytzen
version = 1.0.4
author = PYTZEN
description = PYTZEN Metaprogramming Study Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pytzen.com
project_urls =
    Source Code = https://github.com/pytzen/pytzen
    Metaprogramming Study = https://study.pytzen.com
    Package Usage = https://usage.pytzen.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = pytzen
python_requires = >=3.10